[gd_scene load_steps=11 format=2]

[ext_resource path="res://Objects/Advent Door/Advent Door.gd" type="Script" id=1]
[ext_resource path="res://Objects/Teleporter/Assets/Jump Prompt.png" type="Texture" id=2]
[ext_resource path="res://Objects/Advent Door/Assets/Door.png" type="Texture" id=3]
[ext_resource path="res://Fonts/yoster.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Objects/Advent Door/Assets/Advent House.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="DynamicFont" id=4]
outline_color = Color( 1, 1, 0.921569, 1 )
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.278431, 0.231373, 0.470588, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.196078, 0.160784, 0.278431, 1 )

[sub_resource type="Animation" id=2]
resource_name = "Hover"
length = 4.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("JumpPrompt:offset:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -8, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2, 4 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("JumpPrompt:scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1.1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2, 3, 4 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("JumpPrompt:scale:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1.1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2, 3, 4 )
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("JumpPrompt:offset:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("JumpPrompt:offset:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("JumpPrompt:scale:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("JumpPrompt:scale:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[node name="Advent Door" type="Area2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
rect_scale = Vector2( 0.4, 0.4 )
rect_pivot_offset = Vector2( 8, 8 )
color = Color( 0.941176, 0.709804, 0.254902, 1 )

[node name="AdventHouse" type="Sprite" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 5 )

[node name="Door" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="JumpPrompt" type="Sprite" parent="."]
visible = false
position = Vector2( 24, -16 )
z_index = 2
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="JumpPrompt"]
margin_left = -8.0
margin_top = -8.0
margin_right = 11.0
margin_bottom = 11.0
custom_fonts/font = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "K"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Hover"
playback_speed = 2.0
anims/Hover = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 4, -4 )
scale = Vector2( 2, 2 )
rect = Rect2( -10, -10, 16, 16 )

[connection signal="body_entered" from="." to="." method="_on_TeleporterArea_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_TeleporterArea_body_exited"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
